# pymc-marketing-dagster-example

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
artifacts/: dagster.yaml
pymc_marketing_dagster_example/: assets.py  definitions.py  io_manager.py
