[project]
name = "pymc_marketing_dagster_example"
version = "0.1.0"
description = "An example project for pymc-marketing with dagster"
authors = [
    { name = "Will Dean", email = "wd60622@gmail.com" }
]
dependencies = ["pymc-marketing==0.10.0", "dagster>=1.9.4,<2", "dagster-webserver>=1.9.4,<2", "pre-commit>=4.0.1,<5"]

[tool.setuptools]
packages = ["pymc_marketing_dagster_example"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "pymc_marketing_dagster_example"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
pymc_marketing_dagster_example = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
ipython = ">=8.30.0,<9"
pymc = "<5.16.0"
blas = ">=2.125,<3"
python = "3.12.*"
